Remove unnecessary files